--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,4 +77,6 @@ target_link_libraries (${PROJECT_NAME}
                        ${GLFW_LIBRARIES}
                        ${GLAD_LIBRARIES})
 set_target_properties (${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
